# fastapi-hotels

./: .env  README.md  async_intro.ipynb  docker-compose.yml  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/bookings/: models.py  router.py  schemas.py  service.py
app/hotels/: models.py  router.py  service.py
app/hotels/rooms/: router.py  service.py
app/service/: base.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 4ae6c04a1a81_room_description_may_be_null.py  5190cd8173fe_added_rooms_users_bookings.py  6f7c8a8c65c4_initial_creation_of_hotels.py  85bcbaf148db_initial.py  dc8a00ea90f2_added_unique_email_constraint.py
